README: links to packages

--- a/README
+++ b/README
@@ -78,6 +78,16 @@ All source code is licensed under Apache 2.0 license.
 You can get a copy at http://www.apache.org/licenses/LICENSE-2.0.html
 
 
+Packages
+========
+ * Archlinux: https://aur.archlinux.org/packages.php?ID=41765
+ * Debian: http://packages.debian.org/search?searchon=names&keywords=redsocks
+ * Gentoo (pentoo overlay): https://code.google.com/p/pentoo/source/browse/portage/trunk/net-proxy/redsocks
+ * Gentoo (theebuilds overlay): http://code.google.com/p/theebuilds/source/browse/trunk/net-misc/redsocks
+ * Gentoo (zugaina overlay): http://gpo.zugaina.org/net-proxy/redsocks
+ * Ubuntu: http://packages.ubuntu.com/search?searchon=names&keywords=redsocks
+
+
 Compilation
 ===========
 
