--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+This is an modified version of original redsocks.
+This variant is useful for anti-GFW (Great Fire Wall).
+
+---------------------------------------------------------------------
 This tool allows you to redirect any TCP connection to SOCKS or HTTPS
 proxy using your firewall, so redirection is system-wide.
 
