New link to `Netfilter-packet-flow` image

--- a/README
+++ b/README
@@ -160,7 +160,8 @@ uid=1000(luser) gid=1001(socksified) groups=1000(luser),1001(socksified)
 luser$ sg socksified -c "firefox"
 
 # If you want to configure socksifying router, you should look at
-# doc/iptables-packet-flow.png and doc/iptables-packet-flow-ng.png
+# doc/iptables-packet-flow.png, doc/iptables-packet-flow-ng.png and
+# https://en.wikipedia.org/wiki/File:Netfilter-packet-flow.svg
 # Note, you should have proper `local_ip' value to get external packets with
 # redsocks, default 127.0.0.1 will not go. See iptables(8) manpage regarding
 # REDIRECT target for details.
