More reserver IPv4 addresses

--- a/README
+++ b/README
@@ -131,10 +131,12 @@ root# iptables -t nat -N REDSOCKS
 # and http://tools.ietf.org/html/rfc5735 for full list of reserved networks.
 root# iptables -t nat -A REDSOCKS -d 0.0.0.0/8 -j RETURN
 root# iptables -t nat -A REDSOCKS -d 10.0.0.0/8 -j RETURN
+root# iptables -t nat -A REDSOCKS -d 100.64.0.0/10 -j RETURN
 root# iptables -t nat -A REDSOCKS -d 127.0.0.0/8 -j RETURN
 root# iptables -t nat -A REDSOCKS -d 169.254.0.0/16 -j RETURN
 root# iptables -t nat -A REDSOCKS -d 172.16.0.0/12 -j RETURN
 root# iptables -t nat -A REDSOCKS -d 192.168.0.0/16 -j RETURN
+root# iptables -t nat -A REDSOCKS -d 198.18.0.0/15 -j RETURN
 root# iptables -t nat -A REDSOCKS -d 224.0.0.0/4 -j RETURN
 root# iptables -t nat -A REDSOCKS -d 240.0.0.0/4 -j RETURN
 
